package smartlib.patterns.behavioural;
// Quick note: this file is here to show the pattern idea without mixing in too much else.

public enum EventType {
    BOOK_BORROWED,
    BOOK_RETURNED,
    RESERVATION_EXPIRED,
    FINE_IMPOSED
}
